--- a/src/app/components/dashboard/recursos-humanos/departamento/form/departamento-form/departamento-form.component.html
+++ b/src/app/components/dashboard/recursos-humanos/departamento/form/departamento-form/departamento-form.component.html
@@ -1,29 +1,34 @@
 <div class="container pt-4">
     <div class="row">
         <div class="card text-center">
-            <div class="card-body">            
+            <div class="card-body">
                 <h3> {{titulo}}
                     <div *ngIf="loading" class="spinner-border" role="status">
-                    <span  class="visually-hidden float-right">Loading...</span>
-                  </div> 
+                        <span class="visually-hidden float-right">Loading...</span>
+                    </div>
                 </h3>
-                <form>
+                <div *ngIf="validator" class="alert alert-danger" role="alert">
+                    Todos los campos deben estar llenos
+                </div>
+                <form [formGroup]="formDep" (submit)="edit ? actualizar() : agregar()" autocomplete="off">
                     <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+
+                        <input type="text" required class="form-control" 
+                        placeholder="Departamento" name="nombre" maxlength="25" 
+                        formControlName="nombre" [class.is-invalid]="NombreForm?.errors && NombreForm?.touched">
+
+                        <small class="float-md-start mx-1 text-muted">{{ NombreForm?.value.length }}/25</small>
+                            <!---validaciones--->
+                            <div *ngIf="NombreForm?.errors && NombreForm?.touched">
+                                <small class="mx-1 text-muted" *ngIf="NombreForm?.hasError('required')" class="text-danger">Campo Vacio</small>
+                                <small class="mx-1 text-muted" *ngIf="NombreForm?.hasError('minlength')" class="text-danger">Minimo 5 caracteres</small>
+                            </div>
+                            <!---Termina Validaciones--->
                     </div>
-                    <div class="mb-3">
-                      <label for="exampleInputPassword1" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
+
                     <div class="mt-3">
-                        <button type="text" class="btn btn-secondary btn-lg mx-3" routerLink="/list-empleados">Volver</button>
-                        <button type="submit" class="btn btn-dark btn-lg mx-3">Agregar</button>
+                        <button type="text" class="btn btn-danger mx-3" routerLink="/dashboard/departamento">Volver</button>
+                        <button type="submit" class="btn btn-info mx-3" [disabled]="formDep.invalid">Agregar</button>
                     </div>
                 </form>
             </div>
