--- a/src/app/components/dashboard/recursos-humanos/departamento/form/departamento-form/departamento-form.component.html
+++ b/src/app/components/dashboard/recursos-humanos/departamento/form/departamento-form/departamento-form.component.html
@@ -10,6 +10,7 @@
                 <div *ngIf="validator" class="alert alert-danger" role="alert">
                     Todos los campos deben estar llenos
                 </div>
+
                 <form [formGroup]="formDep" (submit)="edit ? actualizar() : agregar()" autocomplete="off">
                     <div class="mb-3">
 
@@ -18,18 +19,18 @@
                         formControlName="nombre" [class.is-invalid]="NombreForm?.errors && NombreForm?.touched">
 
                         <small class="float-md-start mx-1 text-muted">{{ NombreForm?.value.length }}/25</small>
-                            <!---validaciones--->
+                            <!---Inicia validaciones---->
                             <div *ngIf="NombreForm?.errors && NombreForm?.touched">
                                 <small class="mx-1 text-muted" *ngIf="NombreForm?.hasError('required')" class="text-danger">Campo Vacio</small>
                                 <small class="mx-1 text-muted" *ngIf="NombreForm?.hasError('minlength')" class="text-danger">Minimo 5 caracteres</small>
                             </div>
                             <!---Termina Validaciones--->
                     </div>
-
                     <div class="mt-3">
                         <button type="text" class="btn btn-danger mx-3" routerLink="/dashboard/departamento">Volver</button>
                         <button type="submit" class="btn btn-info mx-3" [disabled]="formDep.invalid">Agregar</button>
                     </div>
+
                 </form>
             </div>
 
