--- a/src/app/components/dashboard/recursos-humanos/puesto/puesto-form/puesto-form.component.html
+++ b/src/app/components/dashboard/recursos-humanos/puesto/puesto-form/puesto-form.component.html
@@ -1,1 +1,49 @@
-<p>puesto-form works!</p>
+<div class="container pt-4">
+    <div class="row ">
+        <div class="card text-center ">
+            <div class="card-body">
+                <h3> {{service.titulo}} Puesto
+                    <div *ngIf="loading" class="spinner-border" role="status">
+                        <span class="visually-hidden float-right">Loading...</span>
+                    </div>
+                </h3>
+                  <form class="example-form" [formGroup]="service.form" (submit)="service.edit ? actualizar() : agregar()" autocomplete="off">
+                    <div class="row">
+
+                        <div class="form-group col-md-6">
+                            <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Puesto</mat-label>
+                              <input required type="text" matInput formControlName="nombre" [errorStateMatcher]="matcher"
+                                     placeholder="Puesto">
+                                     <mat-error *ngIf="NombreForm?.hasError('required')">
+                                         Campo es Requerido
+                                        </mat-error>
+                                        <mat-error *ngIf="NombreForm?.hasError('minlength')">
+                                            Minimo 5 letras
+                                        </mat-error>
+                                        <mat-error *ngIf="NombreForm?.hasError('maxlength')">
+                                            Maximo 50 letras
+                                        </mat-error>
+                                    </mat-form-field>
+                        </div>
+
+
+                        <div class="form-group col-md-6 " formGroupName="departamento">
+                            <mat-form-field appearance="fill">
+                                <mat-label>Departamento</mat-label>
+                                <mat-select formControlName="id" name="id_dep">
+                                  <mat-option *ngFor="let dep of Departamento" [value]="dep.id">
+                                    {{dep.nombre}}
+                                  </mat-option>
+                                </mat-select>
+                              </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="mt-3">
+                        <button type="submit" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}}</button>
+                    </div>
+                  </form>         
+            </div>
+        </div>
+    </div>
+</div>
