--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -1,42 +1,33 @@
-<div>
-    <mat-nav-list>
-        <a mat-list-item routerLink="">
-            <mat-icon mat-list-icon>home</mat-icon>
-            Inicio
-        </a>
-        <a mat-list-item>
-            <mat-icon mat-list-icon>folder</mat-icon>
-            Home
-        </a>
-        <mat-form-field appearance="fill">
-            <mat-select #mode value="side">
-              <mat-option value="side">Side</mat-option>
-              <mat-option value="over">Over</mat-option>
-              <mat-option value="push">Push</mat-option>
-            </mat-select>
-        </mat-form-field>        
-    </mat-nav-list>            
-</div>
+<img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/200x200" />
 
-<div>
-    <mat-nav-list>
+<h4 class="name">John Smith</h4>
+<p class="designation">Software Engineer</p>
 
-        <a mat-list-item routerLink="/dashboard/recursos-inicio">
-            <mat-icon mat-list-icon>people</mat-icon >
-            RR. HH.
-        </a>
-        <mat-form-field appearance="fill">
-            <mat-select #mode value="side">
-              <mat-option value="side" routerLink="/dashboard/recursos-departamento">
-                  Departamento
-                </mat-option>
-              <mat-option >
-                  Puesto
-                </mat-option>
-              <mat-option >
-                  Empleado
-                </mat-option>
-            </mat-select>
-        </mat-form-field>        
-    </mat-nav-list>            
-</div>
+<mat-divider></mat-divider>
+
+<button mat-button class="menu-button" routerLink="/dashboard">
+    <mat-icon>home</mat-icon>
+    <span>Home</span>
+</button>
+<mat-divider></mat-divider>
+
+<button mat-button class="menu-button" routerLink="/dashboard/rr-hh/departamento">
+    <mat-icon>person</mat-icon>
+    <span>Departamento</span>
+</button>
+<button mat-button class="menu-button" routerLink="/dashboard/rr-hh/puesto">
+    <mat-icon>info</mat-icon>
+    <span>Puesto</span>
+</button>
+
+<button mat-button class="menu-button" routerLink="/dashboard/rr-hh/empleado">
+    <mat-icon>person</mat-icon>
+    <span>Empleado</span>
+</button>
+
+<mat-divider></mat-divider>
+
+<button mat-button class="menu-button">
+    <mat-icon>help</mat-icon>
+    <span>Help</span>
+</button>
