modulo producto terminado a excepcion de la imagen y existencia

--- a/src/app/components/dashboard/recursos-humanos/puesto/puesto-form/puesto-form.component.html
+++ b/src/app/components/dashboard/recursos-humanos/puesto/puesto-form/puesto-form.component.html
@@ -29,7 +29,7 @@
 
 
                         <div class="form-group col-md-6 " formGroupName="departamento">
-                            <mat-form-field appearance="fill">
+                            <mat-form-field class="example-full-width" appearance="fill">
                                 <mat-label>Departamento</mat-label>
                                 <mat-select formControlName="id" name="id_dep">
                                   <mat-option *ngFor="let dep of Departamento" [value]="dep.id">
