--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -27,7 +27,29 @@
 
 <mat-divider></mat-divider>
 
-<button mat-button class="menu-button">
+<button mat-button class="menu-button" routerLink="/dashboard/almacen/marca">
     <mat-icon>help</mat-icon>
-    <span>Help</span>
+    <span>Marca</span>
+</button>
+
+<button mat-button class="menu-button" routerLink="/dashboard/almacen/categoria">
+    <mat-icon>help</mat-icon>
+    <span>Categoria</span>
+</button>
+
+<button mat-button class="menu-button" routerLink="/dashboard/almacen/producto">
+    <mat-icon>P</mat-icon>
+    <span>Producto</span>
+</button>
+
+<mat-divider></mat-divider>
+
+<button mat-button class="menu-button" routerLink="/dashboard/compras/compra">
+    <mat-icon>help</mat-icon>
+    <span>Nueva Compra</span>
+</button>
+
+<button mat-button class="menu-button" routerLink="/dashboard/compras/proveedor">
+    <mat-icon>help</mat-icon>
+    <span>Proveedor</span>
 </button>
