--- a/src/app/components/dashboard/almacen/marca/marca-form/marca-form.component.html
+++ b/src/app/components/dashboard/almacen/marca/marca-form/marca-form.component.html
@@ -1,1 +1,29 @@
-<p>marca-form works!</p>
+            <div class="card text-center">
+                <div class="card-body">
+                    <h3> {{service.titulo}} Marca
+                        <div *ngIf="loading" class="spinner-border" role="status">
+                            <span class="visually-hidden float-right">Loading...</span>
+                        </div>
+                    </h3>
+                      <form class="example-form" [formGroup]="service.form" (submit)="service.edit ? actualizar() : agregar()" autocomplete="off">
+                        <div class="row">
+    
+                            <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Nombre</mat-label>
+                              <input required type="text" matInput formControlName="nombre" [errorStateMatcher]="matcher"
+                                     placeholder="Nombre marca">
+                                     <mat-error *ngIf="NombreForm?.hasError('required')">
+                                         Campo es Requerido
+                                        </mat-error>
+                                        <mat-error *ngIf="NombreForm?.hasError('maxlength')">
+                                            Maximo 25 letras
+                                        </mat-error>
+                                    </mat-form-field>
+                        </div>
+                        <div class="mt-3">
+                            <button type="submit" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}}</button>
+                        </div>
+                      </form>         
+                </div>
+            </div>
+
