--- a/src/app/components/dashboard/almacen/producto/producto-form/producto-form.component.html
+++ b/src/app/components/dashboard/almacen/producto/producto-form/producto-form.component.html
@@ -1,1 +1,177 @@
-<p>producto-form works!</p>
+<div class="container p-4">
+    <div class="row ">
+        <div class="card">
+            <div class="card-body">
+                <h3> {{service.titulo}} Producto
+                    <div *ngIf="loading" class="spinner-border" role="status">
+                        <span class="visually-hidden float-right">Loading...</span>
+                    </div>
+                </h3>
+                  <form class="example-form" [formGroup]="service.form" (submit)="service.edit ? actualizar() : agregar()" autocomplete="off">
+                    <div class="row">
+
+                        <div class="form-group col-md-12">
+                            <mat-form-field class="float-start example-full-width" appearance="fill">
+                              <mat-label>Producto</mat-label>
+                              <input required type="text" matInput formControlName="nombre" [errorStateMatcher]="matcher"
+                                    placeholder="Nombre producto">
+                                    <mat-error *ngIf="NombreForm?.hasError('required')">
+                                         Campo es Requerido
+                                    </mat-error>
+                                    <mat-error *ngIf="NombreForm?.hasError('maxlength')">
+                                        Maximo 50 letras
+                                    </mat-error>
+                             </mat-form-field>
+                        </div>
+
+                        <div class="form-group col-md-12">
+                                <mat-form-field class="example-full-width" appearance="fill">
+                                  <mat-label>Descripcion</mat-label>
+                                  <textarea matInput placeholder="Escribe una descripcion" formControlName="descripcion"></textarea>
+                                </mat-form-field>
+                        </div>
+
+                        <div class="form-group col-md-6 ">
+                          <mat-form-field class="ninety-width" appearance="fill">
+                            <mat-label>Categoria</mat-label>
+                            <input type="text"
+                                   placeholder="Selecciona uno"
+                                   aria-label="Categoria"
+                                   matInput
+                                   formControlName="categoria"
+                                   [matAutocomplete]="auto1"
+                                   (keydown.enter)="onKeyPress($event.target)">
+                            <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="displayFnn">
+                              <mat-option *ngFor="let cat of Categoria" [value]="cat">
+                                {{cat.nombre}}
+                              </mat-option>
+                            </mat-autocomplete>
+                            <mat-error *ngIf="CategoriaForm?.hasError('incorrect')">
+                              Por favor selecciona una categoria valida
+                          </mat-error>
+                          </mat-form-field>
+                          <a (click)="openCategoria()" class="pointer mx-2" matTooltip="Nueva Categoria">
+                            <mat-icon>add_circle_outline</mat-icon>
+                          </a>
+                        </div>
+                        
+                        <div class="form-group col-md-6 " >
+                          <mat-form-field class="ninety-width" appearance="fill">
+                            <mat-label>Marca    </mat-label>
+                            <input type="text"
+                                   placeholder="Selecciona uno"
+                                   aria-label="Marca"
+                                   matInput
+                                   formControlName="marca"
+                                   [matAutocomplete]="auto">
+                            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFn">
+                              <mat-option *ngFor="let option of Marca" [value]="option">
+                                {{option.nombre}}
+                              </mat-option>
+                            </mat-autocomplete>
+                            <mat-error *ngIf="MarcaForm?.hasError('incorrect')">
+                              Por favor selecciona una marca valida
+                          </mat-error>
+                          </mat-form-field>
+                          <a (click)="openMarca()" class="pointer mx-2" matTooltip="Nueva marca">
+                            <mat-icon>add_circle_outline</mat-icon>
+                          </a>                         
+                        </div>
+
+                        <div class="form-group col-md-12">   
+                          <mat-form-field class="example-half-width" appearance="fill">
+                            <mat-label>Precio</mat-label>
+                            <input required type="number" name="someid" matInput formControlName="costo_prom" [errorStateMatcher]="matcher"
+                            placeholder="Costo">
+                          </mat-form-field>
+
+                          <mat-form-field class="example-half-width" appearance="fill">
+                              <mat-label>Anitguo Costo</mat-label>
+                              <input readonly type="text" name="someid" [readonly]="true" matInput formControlName="costo_prom_old">
+                          </mat-form-field>
+                          <mat-form-field class="example-half-width" appearance="fill">
+                            <mat-label>Ultimo Precio C.</mat-label>
+                            <input readonly type="text" name="someid" [readonly]="true" matInput formControlName="ultimo_precio">
+                        </mat-form-field>
+
+                      </div>
+                      <div>
+                        <div class="row" formArrayName="precio" class="mt-4" >
+                          <div class="col">
+                            <table class="table table-striped">
+                              <thead class="table-dark">
+                                <tr>
+                                  <th>Tipo Precio</th>
+                                  <th>Precio</th>
+                                  <th>Borrar</th>
+                                </tr>
+                              </thead>
+                              <tbody *ngFor="let control of service.Precios.controls; let i = index" [formGroupName]="i">
+                                <tr FormGroup="control">
+                                    <td> 
+                                      <mat-form-field class="" appearance="fill">
+                                        <input type="number" formControlName="precio" matInput placeholder="Precio" id="task{{i}}">
+                                      </mat-form-field>
+                                    </td>
+                                    <td>
+                                      <div >
+                                        <mat-form-field class="" appearance="fill">
+                                          <mat-select formControlName="tipoPrecio" placeholder="Tipo Precio" id="task{{i}}"> 
+                                            <mat-option *ngFor="let tip of TipoPrecio" [value]="tip">
+                                              {{tip.nombre}}
+                                            </mat-option>
+                                          </mat-select>
+                                        </mat-form-field>
+                                      </div>
+                                    </td>
+                                    <td>
+                                      <a (click)="borrarPrecio(i)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar Precio">
+                                        <mat-icon class="mt-3">delete</mat-icon>
+                                    </a>
+                                    </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <button type="button" class="btn btn-primary btn-block" (click)="service.AgregarPrecio()">+ Agregar Precio</button>
+                          
+                          </div>
+                        </div>
+                      </div>
+
+
+<!--        
+                    <div class="form-group col-md-12">
+                      <ng-container  formArrayName="precios">
+                        <ng-container *ngFor="let control of service.Precios.controls; let i = index" [formGroupName]="i">
+                          <div class="row" FormGroup="control">
+                            <mat-form-field class="example-half-width" appearance="fill">
+                              <input formControlName="precio" matInput placeholder="Precio">
+                            </mat-form-field>
+      
+                            <mat-form-field class="example-half-width" appearance="fill">
+                              <mat-select formControlName="level" placeholder="Lesson level">
+                                <mat-option value="1">1</mat-option>
+                              </mat-select>
+                            </mat-form-field>
+                            <div  class="example-half-width">
+                              <button class="btn btn-danger btn-block" type="button"(click)="borrarPrecio(i)">Quitar</button>
+                              <mat-icon class="delete-btn" type="button" >borrar</mat-icon>
+                            </div>
+                          </div>
+                        </ng-container>
+                      </ng-container>
+                      <button mat-mini-fab type="button" (click)="service.AgregarPrecio()">+</button>
+                    </div>
+
+-->
+
+                    </div>
+                    <div class="mt-3">
+                        <button type="submit" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}} Producto</button>
+                    </div>
+                  </form>
+                       
+            </div>
+        </div>
+    </div>
+</div>
