--- a/src/app/components/dashboard/almacen/producto/producto-list/producto-list.component.html
+++ b/src/app/components/dashboard/almacen/producto/producto-list/producto-list.component.html
@@ -1,1 +1,69 @@
-<p>producto-list works!</p>
+<mat-toolbar>
+    <span class="text-center">Productos</span>
+</mat-toolbar>
+
+<mat-form-field appearance="standard">
+    <mat-label>Filtro</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input autocomplete="off">
+</mat-form-field>
+<button class="btn btn-success m-4 float-md-end" (click)="openForm()">Nuevo</button>
+
+<div class="mat-elevation-z8">
+    <table class="table-material" mat-table [dataSource]="dataSource" matSort>
+
+        <!-- Inicio columnas -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+        
+        <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="descripcion">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Descripcion </th>
+            <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="costo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Costo </th>
+            <td mat-cell *matCellDef="let element"> {{element.costo_prom}} </td>
+        
+        </ng-container>
+
+        <ng-container matColumnDef="categoria">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoria </th>
+            <td mat-cell *matCellDef="let element"> {{element.categoria.nombre}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="marca">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Marca </th>
+            <td mat-cell *matCellDef="let element"> {{element.marca.nombre}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef></th>
+
+            <td mat-cell *matCellDef="let element" style="text-align: right">
+                <a class="pointer mx-2" style="color: #1878b0" matTooltip="Ver">
+                    <mat-icon>search</mat-icon>
+                </a>
+                <a (click)="verEdit(element)" class="pointer mx-2" style="color: #1f516f" matTooltip="Editar">
+                    <mat-icon>edit</mat-icon>
+                </a>
+                <a (click)="elimininarProducto(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar">
+                    <mat-icon>delete</mat-icon>
+                </a>
+            </td>
+        </ng-container>
+        <!-- Fin de Columnas-->
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20,40]" showFirstLastButtons aria-label="Select page of periodic elements">
+    </mat-paginator>
+</div>
