--- a/src/app/components/dashboard/recursos-humanos/departamento/departamento-list/departamento.component.html
+++ b/src/app/components/dashboard/recursos-humanos/departamento/departamento-list/departamento.component.html
@@ -25,13 +25,13 @@
             <th mat-header-cell *matHeaderCellDef></th>
 
             <td mat-cell *matCellDef="let element" style="text-align: right">
-                <a class="pointer mx-2" style="color: #1878b0" matTooltip="Ver Usuario">
+                <a class="pointer mx-2" style="color: #1878b0" matTooltip="Ver">
                     <mat-icon>search</mat-icon>
                 </a>
-                <a (click)="verEdit(element)" class="pointer mx-2" style="color: #1f516f" matTooltip="Editar Usuario">
+                <a (click)="verEdit(element)" class="pointer mx-2" style="color: #1f516f" matTooltip="Editar">
                     <mat-icon>edit</mat-icon>
                 </a>
-                <a (click)="elimininarDepartamento(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar Usuario">
+                <a (click)="elimininarDepartamento(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar">
                     <mat-icon>delete</mat-icon>
                 </a>
             </td>
