--- a/src/app/components/dashboard/recursos-humanos/empleado/empleado-form/empleado-form.component.html
+++ b/src/app/components/dashboard/recursos-humanos/empleado/empleado-form/empleado-form.component.html
@@ -47,7 +47,7 @@
                         <div class="form-group col-md-6">
                             <mat-form-field class="example-full-width" appearance="fill">
                               <mat-label>Telefono</mat-label>
-                              <input required type="text" matInput formControlName="telefono" [errorStateMatcher]="matcher"
+                              <input required type="number" matInput formControlName="telefono" [errorStateMatcher]="matcher"
                                      placeholder="Telefono">
                                      <mat-error *ngIf="TelefonoForm?.hasError('required')">
                                          Ingrese un numero valido
@@ -80,7 +80,7 @@
                         
 
                         <div class="form-group col-md-6 " formGroupName="puesto">
-                            <mat-form-field appearance="fill">
+                            <mat-form-field class="example-full-width" appearance="fill">
                                 <mat-label>Selecciona un puesto</mat-label>
                                 <mat-select formControlName="id" name="id">
                                   <mat-option *ngFor="let puesto of Puesto" [value]="puesto.id">
@@ -91,7 +91,7 @@
                         </div>
 
                         <div class="form-group col-md-6 " formGroupName="sucursal">
-                            <mat-form-field appearance="fill">
+                            <mat-form-field class="example-full-width" appearance="fill">
                                 <mat-label>Selecciona Sucursal</mat-label>
                                 <mat-select formControlName="id" name="id">
                                   <mat-option *ngFor="let suc of Sucursal" [value]="suc.id">
@@ -104,7 +104,9 @@
                     <div class="mt-3">
                         <button type="submit" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}}</button>
                     </div>
-                  </form>         
+                  </form>   
+                
+                
             </div>
         </div>
     </div>
