--- a/src/app/components/dashboard/almacen/marca/marca-form/marca-form.component.html
+++ b/src/app/components/dashboard/almacen/marca/marca-form/marca-form.component.html
@@ -5,7 +5,7 @@
                             <span class="visually-hidden float-right">Loading...</span>
                         </div>
                     </h3>
-                      <form class="example-form" [formGroup]="service.form" (submit)="service.edit ? actualizar() : agregar()" autocomplete="off">
+                      <form class="example-form" [formGroup]="service.form" autocomplete="off">
                         <div class="row">
     
                             <mat-form-field class="example-full-width" appearance="fill">
@@ -21,7 +21,7 @@
                                     </mat-form-field>
                         </div>
                         <div class="mt-3">
-                            <button type="submit" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}}</button>
+                            <button type="button" class="btn btn-info mx-3" (click)="service.edit ? actualizar() : agregar()" [disabled]="service.form.invalid">{{service.titulo}}</button>
                         </div>
                       </form>         
                 </div>
