--- a/src/app/components/dashboard/almacen/producto/producto-form/producto-form.component.html
+++ b/src/app/components/dashboard/almacen/producto/producto-form/producto-form.component.html
@@ -7,7 +7,7 @@
                         <span class="visually-hidden float-right">Loading...</span>
                     </div>
                 </h3>
-                  <form class="example-form" [formGroup]="service.form" (submit)="service.edit ? actualizar() : agregar()" autocomplete="off">
+                  <form class="example-form" [formGroup]="service.form" autocomplete="off">
                     <div class="row">
 
                         <div class="form-group col-md-12">
@@ -43,7 +43,7 @@
                                    (keydown.enter)="onKeyPress($event.target)">
                             <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="displayFnn">
                               <mat-option *ngFor="let cat of Categoria" [value]="cat">
-                                {{cat.nombre}}
+                                {{cat.nombre}}{{cat.id}}
                               </mat-option>
                             </mat-autocomplete>
                             <mat-error *ngIf="CategoriaForm?.hasError('incorrect')">
@@ -55,7 +55,7 @@
                           </a>
                         </div>
                         
-                        <div class="form-group col-md-6 " >
+                        <div class="form-group col-md-6">
                           <mat-form-field class="ninety-width" appearance="fill">
                             <mat-label>Marca    </mat-label>
                             <input type="text"
@@ -79,17 +79,17 @@
                         </div>
 
                         <div class="form-group col-md-12">   
-                          <mat-form-field class="example-half-width" appearance="fill">
+                          <mat-form-field class="three-quarters-width" appearance="fill">
                             <mat-label>Precio</mat-label>
                             <input required type="number" name="someid" matInput formControlName="costo_prom" [errorStateMatcher]="matcher"
                             placeholder="Costo">
                           </mat-form-field>
 
-                          <mat-form-field class="example-half-width" appearance="fill">
+                          <mat-form-field class="three-quarters-width" appearance="fill">
                               <mat-label>Anitguo Costo</mat-label>
                               <input readonly type="text" name="someid" [readonly]="true" matInput formControlName="costo_prom_old">
                           </mat-form-field>
-                          <mat-form-field class="example-half-width" appearance="fill">
+                          <mat-form-field class="three-quarters-width" appearance="fill">
                             <mat-label>Ultimo Precio C.</mat-label>
                             <input readonly type="text" name="someid" [readonly]="true" matInput formControlName="ultimo_precio">
                         </mat-form-field>
@@ -167,10 +167,9 @@
 
                     </div>
                     <div class="mt-3">
-                        <button type="submit" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}} Producto</button>
+                        <button type="button" (click)="service.edit ? actualizar() : agregar()" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}} Producto</button>
                     </div>
-                  </form>
-                       
+                  </form>                     
             </div>
         </div>
     </div>
