--- a/src/app/components/dashboard/compras/compra/compra-form/compra-form.component.html
+++ b/src/app/components/dashboard/compras/compra/compra-form/compra-form.component.html
@@ -1,1 +1,155 @@
-<p>compra-form works!</p>
+<div class="container p-4">
+    <div class="row ">
+        <div class="card">
+            <div class="card-body">
+                <h3> {{service.titulo}} Compra : {{service.fecha | date:'short'}}
+                    <div *ngIf="loading" class="spinner-border" role="status">
+                        <span class="visually-hidden float-right">Loading...</span>
+                    </div>
+                </h3>
+                  <form class="example-form" [formGroup]="service.form" autocomplete="off">
+                    <div class="row">
+
+                        <div class="form-group col-md-6">
+                            <mat-form-field class="example-full-width" appearance="fill">
+                                <mat-label>Numero de Documento</mat-label>
+                                <input type="text" name="someid" matInput formControlName="documento" [errorStateMatcher]="matcher"
+                                placeholder="Numero Documento">
+                              </mat-form-field>
+                        </div>
+                        <div class="form-group col-md-6 " formGroupName="sucursal">
+                          <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Sucursal</mat-label>
+                              <mat-select formControlName="id" name="id_dep">
+                                <mat-option *ngFor="let suc of Sucursal" [value]="suc.id">
+                                  {{suc.nombre}}
+                                </mat-option>
+                              </mat-select>
+                            </mat-form-field>
+                      </div>
+                        <div class="form-group col-md-6">
+                            <mat-form-field class="ninety-width" appearance="fill">
+                              <mat-label>Proveedor</mat-label>
+                              <input 
+                                     required
+                                     type="text"
+                                     placeholder="Selecciona Proveedor"
+                                     aria-label="Proveedor"
+                                     matInput
+                                     formControlName="proveedor"
+                                     [matAutocomplete]="auto1"
+                                     (keydown.enter)="onKeyPress($event.target)">
+                              <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="displayFn">
+                                <mat-option *ngFor="let pro of Proveedor" [value]="pro">
+                                  {{pro.nombre}}
+                                </mat-option>
+                              </mat-autocomplete>
+                              <mat-error *ngIf="ProveedorForm?.hasError('incorrect')">
+                                Por favor selecciona un proveedor valido
+                            </mat-error>
+                            </mat-form-field>
+                            <a class="pointer mx-2" matTooltip="Agregar Proveedor">
+                              <mat-icon>add_circle_outline</mat-icon>
+                            </a>
+                        </div>
+                        
+
+                        
+                        <div class="form-group col-md-6 " >
+                            <mat-form-field class="ninety-width" appearance="fill">
+                                <mat-label>Empleado</mat-label>
+                                <input type="text"
+                                       placeholder="Selecciona Empleado"
+                                       aria-label="Empleado"
+                                       matInput
+                                       formControlName="empleado"
+                                       [matAutocomplete]="auto"
+                                       (keydown.enter)="onKeyPress($event.target)">
+                                <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFnn">
+                                  <mat-option *ngFor="let emp of Empleado" [value]="emp">
+                                    {{emp.nombre }} {{emp.apellido}}
+                                  </mat-option>
+                                </mat-autocomplete>
+                                <mat-error *ngIf="EmpleadoForm?.hasError('incorrect')">
+                                  Por favor selecciona un empleado valido
+                              </mat-error>
+                              </mat-form-field>
+                              <a class="pointer mx-2" matTooltip="Agregar Empleado">
+                                <mat-icon>add_circle_outline</mat-icon>
+                              </a>
+                        </div>
+                        
+                        <button type="button" class="btn btn-primary btn-block" (click)="openProducto()">+ Agregar Productos</button>
+                        
+                        <div>
+                            <div class="row" formArrayName="detalle_compra" class="mt-4" >
+                                <div class="col">
+                                    <table class="table table-striped">
+                                  <thead class="table-dark">
+                                    <tr>
+                                      <th>Cantidad</th>
+                                      <th>Descripcion</th>
+                                      <th>Precio</th>
+                                      <th>Sub Total</th>
+                                      <th>Borrar</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody *ngFor="let control of service.Detalle.controls; let i = index" [formGroupName]="i">
+                                    <tr FormGroup="control">
+                                        <td> 
+                                            <input type="text" formControlName="cantidad" matInput pattern="^[0-9]+" placeholder="Cantidad" id="task{{i}}">
+                                        </td>
+                                        <td>
+
+                                                <input type="text" [readonly]="true" formControlName="nombre_p" matInput placeholder="Producto" id="task{{i}}">
+
+                                        </td>
+                                        <td>
+
+                                                <input type="number" formControlName="precio" matInput placeholder="Precio" id="task{{i}}">
+
+                                        </td>
+                                        <td>
+
+                                              <input type="text" [readonly]="true" formControlName="subtotal" matInput placeholder="subtotal" id="task{{i}}">
+
+                                      </td>
+                                        <td>
+                                          <a (click)="borrarPrecio(i)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar Precio">
+                                            <mat-icon class="mt-3">delete</mat-icon>
+                                        </a>
+                                        </td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                              
+                              </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group col-md-12">
+                          <mat-form-field class="example-full-width" appearance="fill">
+                             <mat-label>Observacion</mat-label>
+                             <textarea matInput placeholder="Observaciones" formControlName="observacion"></textarea>
+                          </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="mt-3">
+                      <button type="button" (click)="agregar()" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}} Producto</button>
+                    </div>
+                  </form>  
+
+                  
+                  <pre>
+                    Esado del forulario: {{service.form.valid}}
+                    <br>
+                    Status {{service.form.status}}
+                </pre>
+
+                <pre>
+                    {{service.form.value | json }}
+                </pre> 
+            </div>
+        </div>
+    </div>
+</div>
