--- a/src/app/components/dashboard/compras/proveedor/proveedor-form/proveedor-form.component.html
+++ b/src/app/components/dashboard/compras/proveedor/proveedor-form/proveedor-form.component.html
@@ -1,1 +1,101 @@
-<p>proveedor-form works!</p>
+<div class="container pt-4">
+    <div class="row ">
+        <div class="card text-center ">
+            <div class="card-body">
+                <h3> {{service.titulo}} Proveedor
+                    <div *ngIf="loading" class="spinner-border" role="status">
+                        <span class="visually-hidden float-right">Loading...</span>
+                    </div>
+                </h3>
+                  <form class="example-form" [formGroup]="service.form" autocomplete="off">
+                    <div class="row">
+
+                        <div class="form-group col-md-6">
+                            <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Nombre</mat-label>
+                              <input required type="text" matInput formControlName="nombre" [errorStateMatcher]="matcher"
+                                     placeholder="Nombre">
+                                     <mat-error *ngIf="NombreForm?.hasError('required')">
+                                         Campo es Requerido
+                                        </mat-error>
+                                        <mat-error *ngIf="NombreForm?.hasError('minlength')">
+                                            Minimo 5 letras
+                                        </mat-error>
+                                        <mat-error *ngIf="NombreForm?.hasError('maxlength')">
+                                            Maximo 50 letras
+                                        </mat-error>
+                             </mat-form-field>
+                        </div>
+
+
+                        <div class="form-group col-md-6">
+                            <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Direccion</mat-label>
+                              <input required type="text" matInput formControlName="direccion" [errorStateMatcher]="matcher"
+                                     placeholder="Direccion">
+                                     <mat-error *ngIf="DireccionForm?.hasError('required')">
+                                         Campo es Requerido
+                                        </mat-error>
+                                        <mat-error *ngIf="DireccionForm?.hasError('minlength')">
+                                            Minimo 5 letras
+                                        </mat-error>
+                                        <mat-error *ngIf="DireccionForm?.hasError('maxlength')">
+                                            Maximo 125 letras
+                                        </mat-error>
+                                    </mat-form-field>
+                        </div>
+                        
+                        <div class="form-group col-md-6">
+                            <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Telefono</mat-label>
+                                <input required type="number" matInput formControlName="telefono" [errorStateMatcher]="matcher"
+                                     placeholder="Telefono">
+                                     <mat-error *ngIf="TelefonoForm?.hasError('required')">
+                                         Ingrese un numero valido
+                                        </mat-error>
+                                        <mat-error *ngIf="TelefonoForm?.hasError('minlength')">
+                                            Minimo 8 digitos
+                                        </mat-error>
+                                        <mat-error *ngIf="TelefonoForm?.hasError('maxlength')">
+                                            Maximo 15 digitos
+                                        </mat-error>
+                             </mat-form-field>
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Nit</mat-label>
+                              <input required type="text" matInput formControlName="nit" [errorStateMatcher]="matcher"
+                                     placeholder="Nit">
+                                     <mat-error *ngIf="NitForm?.hasError('required')">
+                                         Campo es Requerido
+                                        </mat-error>
+                                        <mat-error *ngIf="NitForm?.hasError('minlength')">
+                                            Minimo 5 letras
+                                        </mat-error>
+                                        <mat-error *ngIf="NitForm?.hasError('maxlength')">
+                                            Maximo 10 letras
+                                        </mat-error>
+                             </mat-form-field>
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Correo</mat-label>
+                              <input type="text" matInput formControlName="correo" [errorStateMatcher]="matcher"
+                                     placeholder="Correo">
+                                        <mat-error *ngIf="CorreoForm?.hasError('maxlength')">
+                                            Maximo 25 letras
+                                        </mat-error>
+                             </mat-form-field>
+                        </div>
+
+                    </div>
+                    <div class="mt-3">
+                        <button type="button" (click)="service.edit ? actualizar() : agregar()" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}}</button>
+                    </div>
+                  </form>                   
+            </div>
+        </div>
+    </div>
+</div>
