--- a/src/app/components/dashboard/recursos-humanos/departamento/departamento-form/departamento-form.component.html
+++ b/src/app/components/dashboard/recursos-humanos/departamento/departamento-form/departamento-form.component.html
@@ -7,7 +7,7 @@
                             <span class="visually-hidden float-right">Loading...</span>
                         </div>
                     </h3>
-                      <form class="example-form" [formGroup]="service.form" (submit)="service.edit ? actualizar() : agregar()" autocomplete="off">
+                      <form class="example-form" [formGroup]="service.form" autocomplete="off">
                         <div class="row">
     
                             <div class="form-group col-md-12">
@@ -29,9 +29,18 @@
                                 
                         </div>
                         <div class="mt-3">
-                            <button type="submit" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}}</button>
+                            <button type="button" (click)="service.edit ? actualizar() : agregar()" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}}</button>
                         </div>
-                      </form>         
+                      </form>   
+                      <pre>
+                        Esado del forulario: {{service.form.valid}}
+                        <br>
+                        Status {{service.form.status}}
+                    </pre>
+                    
+                    <pre>
+                        {{service.form.value | json }}
+                    </pre>      
                 </div>
             </div>
         </div>
