--- a/src/app/components/dashboard/almacen/categoria/categoria-form/categoria-form.component.html
+++ b/src/app/components/dashboard/almacen/categoria/categoria-form/categoria-form.component.html
@@ -1,6 +1,5 @@
 <div class="container pt-4">
-    <div class="row justify-content-center">
-        <div class="col-md-8">      
+    <div class="row">  
             <div class="card text-center">
                 <div class="card-body">
                     <h3> {{service.titulo}} Categoria
@@ -29,7 +28,6 @@
                       </form>         
                 </div>
             </div>
-        </div>
     </div>
 </div>
 
