--- a/src/app/components/dashboard/compras/compras.component.html
+++ b/src/app/components/dashboard/compras/compras.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+
+    <button mat-button class="menu-button" routerLink="/dashboard/compras/compra">
+      <mat-icon>format_list_bulleted</mat-icon>
+      <span>Ver Compras Hechas</span>
+    </button>
+    <button mat-button class="menu-button" routerLink="/dashboard/compras/orden-compra">
+      <mat-icon>format_list_bulleted</mat-icon>
+      <span>Ver Orden Compras</span>
+    </button>
+    <button mat-button class="menu-button" routerLink="/dashboard/compras/compra-form">
+    <mat-icon>list_alt</mat-icon>
+    <span>Nueva Compra</span>
+    </button>
+
+
+<router-outlet></router-outlet> 
