--- a/src/app/components/dashboard/compras/proveedor/proveedor-list/proveedor-list.component.html
+++ b/src/app/components/dashboard/compras/proveedor/proveedor-list/proveedor-list.component.html
@@ -52,7 +52,7 @@
                 <a (click)="verEdit(element)" class="pointer mx-2" style="color: #1f516f" matTooltip="Editar">
                     <mat-icon>edit</mat-icon>
                 </a>
-                <a (click)="elimininarPuesto(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar">
+                <a (click)="elimininar(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar">
                     <mat-icon>delete</mat-icon>
                 </a>
             </td>
