--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -28,28 +28,40 @@
 <mat-divider></mat-divider>
 
 <button mat-button class="menu-button" routerLink="/dashboard/almacen/marca">
-    <mat-icon>help</mat-icon>
+    <mat-icon>layers_clear</mat-icon>
     <span>Marca</span>
 </button>
 
 <button mat-button class="menu-button" routerLink="/dashboard/almacen/categoria">
-    <mat-icon>help</mat-icon>
+    <mat-icon>category</mat-icon>
     <span>Categoria</span>
 </button>
 
 <button mat-button class="menu-button" routerLink="/dashboard/almacen/producto">
-    <mat-icon>P</mat-icon>
+    <mat-icon>inventory_2</mat-icon>
     <span>Producto</span>
 </button>
 
 <mat-divider></mat-divider>
 
 <button mat-button class="menu-button" routerLink="/dashboard/compras/compra">
-    <mat-icon>help</mat-icon>
-    <span>Nueva Compra</span>
+    <mat-icon>storefront</mat-icon>
+    <span>Compras</span>
 </button>
 
 <button mat-button class="menu-button" routerLink="/dashboard/compras/proveedor">
-    <mat-icon>help</mat-icon>
-    <span>Proveedor</span>
+    <mat-icon>groups</mat-icon>
+    <span>Proveedores</span>
+</button>
+
+<mat-divider></mat-divider>
+
+<button mat-button class="menu-button" routerLink="/dashboard/ventas/venta">
+    <mat-icon>storefront</mat-icon>
+    <span>Ventas</span>
+</button>
+
+<button mat-button class="menu-button" routerLink="/dashboard/ventas/cliente">
+    <mat-icon>groups</mat-icon>
+    <span>Clientes</span>
 </button>
