--- a/src/app/components/dashboard/almacen/producto/producto-form/producto-form.component.html
+++ b/src/app/components/dashboard/almacen/producto/producto-form/producto-form.component.html
@@ -115,9 +115,9 @@
                                     </td>
                                     <td>
                                       <div >
-                                        <mat-form-field class="" appearance="fill">
-                                          <mat-select formControlName="tipoPrecio" placeholder="Tipo Precio" id="task{{i}}"> 
-                                            <mat-option *ngFor="let tip of TipoPrecio" [value]="tip">
+                                        <mat-form-field class="" appearance="fill" formGroupName="tipoPrecio">
+                                          <mat-select formControlName="id" placeholder="Tipo Precio" id="task{{i}}"> 
+                                            <mat-option *ngFor="let tip of tipoPrecio" [value]="tip.id">
                                               {{tip.nombre}}
                                             </mat-option>
                                           </mat-select>
@@ -132,44 +132,15 @@
                                 </tr>
                               </tbody>
                             </table>
-                            <button type="button" class="btn btn-primary btn-block" (click)="service.AgregarPrecio()">+ Agregar Precio</button>
-                          
+                            <button type="button" class="btn btn-primary btn-block" (click)="service.AgregarPrecio()">+ Agregar Precio</button>            
                           </div>
                         </div>
                       </div>
-
-
-<!--        
-                    <div class="form-group col-md-12">
-                      <ng-container  formArrayName="precios">
-                        <ng-container *ngFor="let control of service.Precios.controls; let i = index" [formGroupName]="i">
-                          <div class="row" FormGroup="control">
-                            <mat-form-field class="example-half-width" appearance="fill">
-                              <input formControlName="precio" matInput placeholder="Precio">
-                            </mat-form-field>
-      
-                            <mat-form-field class="example-half-width" appearance="fill">
-                              <mat-select formControlName="level" placeholder="Lesson level">
-                                <mat-option value="1">1</mat-option>
-                              </mat-select>
-                            </mat-form-field>
-                            <div  class="example-half-width">
-                              <button class="btn btn-danger btn-block" type="button"(click)="borrarPrecio(i)">Quitar</button>
-                              <mat-icon class="delete-btn" type="button" >borrar</mat-icon>
-                            </div>
-                          </div>
-                        </ng-container>
-                      </ng-container>
-                      <button mat-mini-fab type="button" (click)="service.AgregarPrecio()">+</button>
-                    </div>
-
--->
-
                     </div>
                     <div class="mt-3">
                         <button type="button" (click)="service.edit ? actualizar() : agregar()" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}} Producto</button>
                     </div>
-                  </form>                     
+                  </form> 
             </div>
         </div>
     </div>
