--- a/src/app/components/dashboard/compras/compra/compra-form/compra-form.component.html
+++ b/src/app/components/dashboard/compras/compra/compra-form/compra-form.component.html
@@ -1,23 +1,57 @@
 <div class="container p-4">
     <div class="row ">
         <div class="card">
-            <div class="card-body">
-                <h3> {{service.titulo}} Compra : {{service.fecha | date:'short'}}
-                    <div *ngIf="loading" class="spinner-border" role="status">
-                        <span class="visually-hidden float-right">Loading...</span>
-                    </div>
-                </h3>
+            <div class="card-body">               
+              <div class="mt-3 center" *ngIf="service.view">
+                <button type="button"  *ngIf="service.orden" (click)="CerrarCompra()" 
+                class="btn btn-danger mx-3">
+                      X
+                </button>
+              </div>
+                <button *ngIf="!service.view" mat-button color="primary" class="menu-button" (click)="service.configNuevo()">
+                  <mat-icon>list_alt</mat-icon>
+                  <span>Nueva Compra</span>
+                </button>
+                <button *ngIf="!service.view" mat-button color="accent" class="menu-button" (click)="service.configNuevaOrdenCompra()">
+                  <mat-icon>summarize</mat-icon>
+                  <span>Orden de Compra</span>
+                </button>
+                <h1> {{service.nuevo}} {{service.Titulo}} : {{service.fecha | date:'short'}}
+                  <div *ngIf="loading" class="spinner-border" role="status">
+                      <span class="visually-hidden float-right">Loading...</span>
+                  </div>
+                </h1>
+
+
+
                   <form class="example-form" [formGroup]="service.form" autocomplete="off">
                     <div class="row">
 
-                        <div class="form-group col-md-6">
-                            <mat-form-field class="example-full-width" appearance="fill">
-                                <mat-label>Numero de Documento</mat-label>
-                                <input type="text" name="someid" matInput formControlName="documento" [errorStateMatcher]="matcher"
-                                placeholder="Numero Documento">
-                              </mat-form-field>
-                        </div>
-                        <div class="form-group col-md-6 " formGroupName="sucursal">
+                      
+                      <div class="form-group col-md-6" >
+                        <mat-form-field class="example-full-width" appearance="fill">
+                            <mat-label>Empleado</mat-label>
+                            <input type="text"
+                                   placeholder="Selecciona Empleado"
+                                   aria-label="Empleado"
+                                   matInput
+                                   formControlName="empleado"
+                                   [matAutocomplete]="auto"
+                                   (keydown.enter)="onKeyPress($event.target)"
+                                   [readonly]="service.view">
+                            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFnn">
+                              <mat-option *ngFor="let emp of Empleado" [value]="emp">
+                                {{emp.nombre }} {{emp.apellido}}
+                              </mat-option>
+                            </mat-autocomplete>
+                            <mat-error *ngIf="EmpleadoForm?.hasError('incorrect')">
+                              Por favor selecciona un empleado valido
+                          </mat-error>
+                          </mat-form-field>
+                    </div>
+
+
+                        <div class="form-group col-md-6" formGroupName="sucursal">
                           <mat-form-field class="example-full-width" appearance="fill">
                               <mat-label>Sucursal</mat-label>
                               <mat-select formControlName="id" name="id_dep">
@@ -38,7 +72,8 @@
                                      matInput
                                      formControlName="proveedor"
                                      [matAutocomplete]="auto1"
-                                     (keydown.enter)="onKeyPress($event.target)">
+                                     (keydown.enter)="onKeyPress($event.target)"
+                                     [readonly]="service.view">
                               <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="displayFn">
                                 <mat-option *ngFor="let pro of Proveedor" [value]="pro">
                                   {{pro.nombre}}
@@ -48,41 +83,25 @@
                                 Por favor selecciona un proveedor valido
                             </mat-error>
                             </mat-form-field>
-                            <a class="pointer mx-2" matTooltip="Agregar Proveedor">
+                            <a *ngIf="!service.view" (click)="openProveedor()" class="pointer mx-2" matTooltip="Agregar Proveedor">
                               <mat-icon>add_circle_outline</mat-icon>
                             </a>
                         </div>
                         
 
+                        <div class="form-group col-md-6">
+                          <mat-form-field class="example-full-width" appearance="fill">
+                              <mat-label>Numero de Documento</mat-label>
+                              <input type="text" name="someid" matInput formControlName="documento" [errorStateMatcher]="matcher"
+                              placeholder="Numero Documento" [readonly]="service.view">
+                          </mat-form-field>
+                        </div>  
+
                         
-                        <div class="form-group col-md-6 " >
-                            <mat-form-field class="ninety-width" appearance="fill">
-                                <mat-label>Empleado</mat-label>
-                                <input type="text"
-                                       placeholder="Selecciona Empleado"
-                                       aria-label="Empleado"
-                                       matInput
-                                       formControlName="empleado"
-                                       [matAutocomplete]="auto"
-                                       (keydown.enter)="onKeyPress($event.target)">
-                                <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFnn">
-                                  <mat-option *ngFor="let emp of Empleado" [value]="emp">
-                                    {{emp.nombre }} {{emp.apellido}}
-                                  </mat-option>
-                                </mat-autocomplete>
-                                <mat-error *ngIf="EmpleadoForm?.hasError('incorrect')">
-                                  Por favor selecciona un empleado valido
-                              </mat-error>
-                              </mat-form-field>
-                              <a class="pointer mx-2" matTooltip="Agregar Empleado">
-                                <mat-icon>add_circle_outline</mat-icon>
-                              </a>
-                        </div>
-                        
-                        <button type="button" class="btn btn-primary btn-block" (click)="openProducto()">+ Agregar Productos</button>
+                        <button *ngIf="!service.view" type="button" class="btn btn-primary btn-block" (click)="openProducto()">+ Agregar Productos</button>
                         
                         <div>
-                            <div class="row" formArrayName="detalle_compra" class="mt-4" >
+                            <div class="row" formArrayName="detalle" class="mt-4" >
                                 <div class="col">
                                     <table class="table table-striped">
                                   <thead class="table-dark">
@@ -97,32 +116,32 @@
                                   <tbody *ngFor="let control of service.Detalle.controls; let i = index" [formGroupName]="i">
                                     <tr FormGroup="control">
                                         <td> 
-                                            <input type="text" formControlName="cantidad" matInput pattern="^[0-9]+" placeholder="Cantidad" id="task{{i}}">
+                                            <input type="number" (keyup)="onKey($event)" [readonly]="service.view" formControlName="cantidad" matInput pattern="^[0-9]+" placeholder="Cantidad" id="{{i}}">
                                         </td>
                                         <td>
-
                                                 <input type="text" [readonly]="true" formControlName="nombre_p" matInput placeholder="Producto" id="task{{i}}">
-
                                         </td>
                                         <td>
-
-                                                <input type="number" formControlName="precio" matInput placeholder="Precio" id="task{{i}}">
-
+                                                <input type="number" (keyup)="onKey($event)" [readonly]="service.view" formControlName="precio" matInput placeholder="Precio" id="{{i}}">
                                         </td>
                                         <td>
-
-                                              <input type="text" [readonly]="true" formControlName="subtotal" matInput placeholder="subtotal" id="task{{i}}">
-
+                                              <input name="subtotal" type="text" [readonly]="true" formControlName="subtotal" matInput placeholder="subtotal" id="task{{i}}" value={{service.form.value.detalle[i]?.subtotal}}>
                                       </td>
-                                        <td>
+                                        <td *ngIf="!service.view">
                                           <a (click)="borrarPrecio(i)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar Precio">
                                             <mat-icon class="mt-3">delete</mat-icon>
                                         </a>
                                         </td>
                                     </tr>
                                   </tbody>
-                                </table>
-                              
+                                  <tfoot>
+                                    <th></th>
+                                    <th></th>
+                                    <th><h2>TOTAL</h2></th>
+                                    <th><h2>Q.{{service.total_factura}}</h2></th>
+                                    <th></th>
+                                  </tfoot>
+                                </table>                              
                               </div>
                             </div>
                         </div>
@@ -134,21 +153,23 @@
                           </mat-form-field>
                         </div>
                     </div>
-                    <div class="mt-3">
-                      <button type="button" (click)="agregar()" class="btn btn-info mx-3" [disabled]="service.form.invalid">{{service.titulo}} Producto</button>
+                    <div class="mt-3 center" *ngIf="!service.view">
+                      <button type="button" *ngIf="!service.orden" (click)="service.orden ? agregarOrden() : agregar()" 
+                      class="btn btn-info mx-3" [disabled]="service.form.invalid">
+                          {{service.nuevo}} {{service.Titulo}}
+                      </button>
+                      <button type="button"  *ngIf="service.orden" (click)="service.orden ? agregarOrden() : agregar()" 
+                      class="btn btn-danger mx-3" [disabled]="service.form.invalid">
+                          {{service.nuevo}} {{service.Titulo}}
+                      </button>
+                    </div>
+                    <div class="mt-3 center" *ngIf="service.view">
+                      <button type="button"  *ngIf="service.orden" (click)="continuarOrden()" 
+                      class="btn btn-danger mx-3">
+                          Continuar Listado
+                      </button>
                     </div>
                   </form>  
-
-                  
-                  <pre>
-                    Esado del forulario: {{service.form.valid}}
-                    <br>
-                    Status {{service.form.status}}
-                </pre>
-
-                <pre>
-                    {{service.form.value | json }}
-                </pre> 
             </div>
         </div>
     </div>
