--- a/src/app/components/dashboard/compras/proveedor/proveedor-form/proveedor-form.component.html
+++ b/src/app/components/dashboard/compras/proveedor/proveedor-form/proveedor-form.component.html
@@ -48,11 +48,11 @@
                         <div class="form-group col-md-6">
                             <mat-form-field class="example-full-width" appearance="fill">
                               <mat-label>Telefono</mat-label>
-                                <input required type="number" matInput formControlName="telefono" [errorStateMatcher]="matcher"
+                                <input required type="text" matInput formControlName="telefono" [errorStateMatcher]="matcher"
                                      placeholder="Telefono">
-                                     <mat-error *ngIf="TelefonoForm?.hasError('required')">
-                                         Ingrese un numero valido
-                                        </mat-error>
+                                       <mat-error *ngIf="TelefonoForm?.hasError('pattern')">
+                                        Ingrese un numero valido
+                                       </mat-error>
                                         <mat-error *ngIf="TelefonoForm?.hasError('minlength')">
                                             Minimo 8 digitos
                                         </mat-error>
