--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="body">
     <div class="login">
         <mat-spinner *ngIf="loading" diameter="50" class="spinner"></mat-spinner>
-        <form *ngIf="!loading" [formGroup]="form" (ngSubmit)="ingresar()">
+        <form *ngIf="!loading" [formGroup]="form" (ngSubmit)="login()">
             <img alt="" width="50%" height="80%">
             <h1 class="h3 mb-3 fw-normal">Login</h1>
             <mat-form-field class="ancho" appearance="fill">
