--- a/src/app/components/shared/navbar/nav-bar/nav-bar.component.html
+++ b/src/app/components/shared/navbar/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary">
     <span>App</span>
     <span class="example-spacer"></span>
-    <button mat-button >Usuario</button>
+    <button mat-button >{{usuario.user + ' '+ usuario.role}}</button>
     <span class="example-spacer"></span>
-    <button routerLink="/logout" mat-icon-button>
+    <button (click)="logout()" mat-icon-button>
       <mat-icon>logout</mat-icon>
     </button>
   </mat-toolbar>
