arrelando mudulo de ventas, anumalaciones

--- a/src/app/components/dashboard/compras/compra/producto/producto.component.html
+++ b/src/app/components/dashboard/compras/compra/producto/producto.component.html
@@ -80,7 +80,7 @@
                             </mat-form-field>
                         </div> 
                     </div>
-                    <button type="button" (click)="service.AgregarDetalle()" class="btn btn-info mx-3" [disabled]="service.formCantidadProd.invalid">Agregar</button>
+                    <button type="button" (click)="AgregarDetalle()" class="btn btn-info mx-3" [disabled]="service.formCantidadProd.invalid">Agregar</button>
                 </div>
             </div>
         </div>
