--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -44,6 +44,10 @@
         <mat-icon>inventory_2</mat-icon>
         <span>Producto</span>
     </button>
+    <button mat-button class="menu-button" routerLink="/dashboard/almacen/inventario-list">
+        <mat-icon>inventory_2</mat-icon>
+        <span>Inventario</span>
+    </button>
 </div>
 
 <!-- COMPRAS -->
