--- a/src/app/components/dashboard/compras/compra/compra-form/compra-form.component.html
+++ b/src/app/components/dashboard/compras/compra/compra-form/compra-form.component.html
@@ -28,7 +28,7 @@
                     <div class="row">
 
                       
-                      <div class="form-group col-md-6" >
+                      <div class="form-group col-md-6" *ngIf="service.view">
                         <mat-form-field class="example-full-width" appearance="fill">
                             <mat-label>Empleado</mat-label>
                             <input type="text"
@@ -51,7 +51,7 @@
                     </div>
 
 
-                        <div class="form-group col-md-6" formGroupName="sucursal">
+                        <div class="form-group col-md-6" formGroupName="sucursal"  *ngIf="service.view">
                           <mat-form-field class="example-full-width" appearance="fill">
                               <mat-label>Sucursal</mat-label>
                               <mat-select formControlName="id" name="id_dep">
@@ -65,7 +65,6 @@
                             <mat-form-field class="ninety-width" appearance="fill">
                               <mat-label>Proveedor</mat-label>
                               <input 
-                                     required
                                      type="text"
                                      placeholder="Selecciona Proveedor"
                                      aria-label="Proveedor"
@@ -110,13 +109,14 @@
                                       <th>Descripcion</th>
                                       <th>Precio</th>
                                       <th>Sub Total</th>
-                                      <th>Borrar</th>
+                                      <th *ngIf="!service.view">Borrar</th>
                                     </tr>
                                   </thead>
                                   <tbody *ngFor="let control of service.Detalle.controls; let i = index" [formGroupName]="i">
                                     <tr FormGroup="control">
                                         <td> 
-                                            <input type="number" (keyup)="onKey($event)" [readonly]="service.view" formControlName="cantidad" matInput pattern="^[0-9]+" placeholder="Cantidad" id="{{i}}">
+                                            <input type="number" (keyup)="onKey($event)" [readonly]="service.view" formControlName="cantidad" 
+                                            matInput pattern="^[0-9]+" placeholder="Cantidad" id="{{i}}" [value]="this.service.form.value.detalle[i].cantidad">
                                         </td>
                                         <td>
                                                 <input type="text" [readonly]="true" formControlName="nombre_p" matInput placeholder="Producto" id="task{{i}}">
