--- a/src/app/components/dashboard/ventas/venta/venta-form/venta-form.component.html
+++ b/src/app/components/dashboard/ventas/venta/venta-form/venta-form.component.html
@@ -2,14 +2,12 @@
     <div class="row ">
         <div class="card">
             <div class="card-body">    
-              {{service.id}}           
-                  <button (click)="llenar()">a</button>
                   <button *ngIf="!service.view" mat-button color="primary" class="menu-button" (click)="service.configNuevo()">
                     <mat-icon>list_alt</mat-icon>
                     <span>Venta</span>
                   </button>
-                  <button *ngIf="!service.view" mat-button color="accent" class="menu-button" (click)="service.configNuevaOrdenCompra()">
-                    <mat-icon>summarize</mat-icon>
+                  <button *ngIf="!service.view" mat-button color="accent" class="menu-button" (click)="service.configNuevaCotizacion()">
+                    <mat-icon>summarize</mat-icon> 
                     <span>Cotizacion</span>
                   </button>
                 <h1> {{service.nuevo}} {{service.Titulo}} : {{service.fecha | date:'short'}}
@@ -17,49 +15,12 @@
                       <span class="visually-hidden float-right">Loading...</span>
                   </div>
                 </h1>
-
-
-
                   <form class="example-form" [formGroup]="service.form" autocomplete="off">
                     <div class="row">
-
-                      
-                      <div class="form-group col-md-6" >
-                        <mat-form-field class="example-full-width" appearance="fill">
-                            <mat-label>Empleado</mat-label>
-                            <input type="text"
-                                   placeholder="Selecciona Empleado"
-                                   aria-label="Empleado"
-                                   matInput
-                                   formControlName="empleado"
-                                   [matAutocomplete]="auto"
-                                   (keydown.enter)="onKeyPress($event)">
-                            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFnn">
-                              <mat-option *ngFor="let emp of Empleado" [value]="emp">
-                                {{emp.nombre }} {{emp.apellido}}
-                              </mat-option>
-                            </mat-autocomplete>
-                            <mat-error *ngIf="EmpleadoForm?.hasError('incorrect')">
-                              Por favor selecciona un empleado valido
-                          </mat-error>
-                          </mat-form-field>
-                    </div>
-
-
-                        <div class="form-group col-md-6" formGroupName="sucursal">
-                          <mat-form-field class="example-full-width" appearance="fill">
-                              <mat-label>Sucursal</mat-label>
-                              <mat-select formControlName="id" name="id_dep">
-                                <mat-option *ngFor="let suc of Sucursal" [value]="suc.id">
-                                  {{suc.nombre}}
-                                </mat-option>
-                              </mat-select>
-                            </mat-form-field>
-                      </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-12">
                             <mat-form-field class="ninety-width" appearance="fill">
                               <mat-label>Cliente</mat-label>
-                              <input 
+                              <input                               
                                      required
                                      type="text"
                                      placeholder="Selecciona Cliente"
@@ -74,7 +35,7 @@
                                 </mat-option>
                               </mat-autocomplete>
                               <mat-error *ngIf="ClienteForm?.hasError('incorrect')">
-                                Por favor selecciona un proveedor valido
+                                Por favor selecciona un cliente valido
                             </mat-error>
                             </mat-form-field>
                             <a *ngIf="!service.view" (click)="openCliente()" class="pointer mx-2" matTooltip="Agregar Proveedor">
@@ -100,9 +61,10 @@
                                   <tbody *ngFor="let control of service.Detalle.controls; let i = index" [formGroupName]="i">
                                     <tr FormGroup="control">
                                         <td> 
-                                            <input type="number" (keyup)="onKey($event)" [readonly]="service.view" formControlName="cantidad" 
+                                            <input min="1" type="number" (keyup)="onKey($event)" [readonly]="service.view" formControlName="cantidad" 
                                             matInput pattern="^[0-9]+" placeholder="Cantidad" id="{{i}}" [value]="this.service.form.value.detalle[i].cantidad">
-                                        </td>
+                                            
+                                          </td>
                                         <td>
                                                 <input type="text" [readonly]="true" formControlName="nombre_p" matInput placeholder="Producto" id="task{{i}}">
                                         </td>
@@ -148,17 +110,19 @@
                         </div>
                     </div>
                     <div class="mt-3 center" *ngIf="!service.view">
+                      <!-- Boton que aparece cuando es venta -->
                       <button type="button" *ngIf="!service.orden" (click)="service.orden ? agregarCotizacion() : agregar()" 
                       class="btn btn-info mx-3" [disabled]="service.form.invalid">
                           {{service.nuevo}} {{service.Titulo}}
                       </button>
+                      <!-- Boton que aparece cuando es cotizacion -->
                       <button type="button"  *ngIf="service.orden" (click)="service.orden ? agregarCotizacion() : agregar()" 
-                      class="btn btn-danger mx-3" [disabled]="service.form.invalid">
+                      class="btn btn-danger mx-3" [disabled]="ClienteForm?.hasError('incorrect')">
                           {{service.nuevo}} {{service.Titulo}}
                       </button>
                     </div>
                     <div class="mt-3 center" *ngIf="service.view">
-                      <button type="button"  *ngIf="service.orden" (click)="continuarOrden()" 
+                      <button type="button"  *ngIf="service.orden" (click)="continuarCotizacion()" 
                       class="btn btn-danger mx-3" [disabled]="service.form.invalid">
                           Continuar Listado
                       </button>
