--- a/src/app/components/dashboard/ventas/venta/vista/vista.component.html
+++ b/src/app/components/dashboard/ventas/venta/vista/vista.component.html
@@ -7,15 +7,12 @@
                     <mat-icon>list_alt</mat-icon>
                     <span>Venta</span>
                   </button>
-                  <button *ngIf="!service.view" mat-button color="accent" class="menu-button" (click)="service.configNuevaOrdenCompra()">
+                  <button *ngIf="!service.view" mat-button color="accent" class="menu-button" (click)="service.configNuevaCotizacion()">
                     <mat-icon>summarize</mat-icon>
                     <span>Cotizacion</span>
                   </button>
                 <h1> {{service.nuevo}} {{service.Titulo}} : {{service.fecha | date:'short'}}
                 </h1>
-
-
-
                   <form class="example-form" [formGroup]="service.form" autocomplete="off">
                     <div class="row">
 
@@ -31,8 +28,6 @@
                                    value="{{service.form.value?.empleado?.nombre}}">
                           </mat-form-field>
                     </div>
-
-
                         <div class="form-group col-md-6" formGroupName="sucursal">
                           <mat-form-field class="example-full-width" appearance="fill">
                               <mat-label>Sucursal</mat-label>
@@ -54,9 +49,7 @@
                               formControlName="empleado"     
                               value="{{service.form.value?.empleado?.nombre}}">
                             </mat-form-field>
-                         </div>
-             
-                        
+                         </div>        
                         <div>
                             <div class="row" formArrayName="detalle" class="mt-4" >
                                 <div class="col">
@@ -98,19 +91,18 @@
                               </div>
                             </div>
                         </div>
-
                         <div class="form-group col-md-12">
                           <mat-form-field  class="example-full-width" appearance="fill">
                              <mat-label>Observacion</mat-label>
                              <textarea [readonly]="true" matInput placeholder="Observaciones" formControlName="observacion"></textarea>
                           </mat-form-field>
                         </div>
-                    </div>
-                    <div class="mt-3 center">
-                      <button type="button" (click)="agregar()" 
-                      class="btn btn-danger mx-3" >
-                          Continuar Cotizacion
-                      </button>
+                        <div class="mt-3 center" *ngIf="service.view">
+                          <button type="button"  *ngIf="service.orden" (click)="agregar()" 
+                          class="btn btn-danger mx-3" [disabled]="service.form.invalid">
+                              Continuar Venta
+                          </button>
+                        </div>
                     </div>
                   </form>  
             </div>
